# alatoo_2025lexam

./: README.MD  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/dependencies/: db.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: full_page.data.ts  globals.css  layout.tsx  page.tsx
frontend/app/state/: full_page.data.ts  todostore.ts
