[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["spacejoel09 <stimdlastim@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = {version = ">=0.135.3,<0.136.0", extras = ["standard"]}
pydantic = ">=2.13.0,<3.0.0"
sqlalchemy = ">=2.0.49,<3.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
